--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,3 +1,9 @@
-controllers:
+# controllers:
+#   resource: ../../src/Controller/
+#   type: annotation
+
+# Controller for Rest API
+rest_controller:
   resource: ../../src/Controller/
   type: annotation
+  prefix: /api
